--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.1.2",
+        "axios": "^1.8.4",
         "laravel-vite-plugin": "^0.7.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "toastify-js": "^1.12.0"
     }
 }
