--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.21",
         "axios": "^1.9.0",
         "laravel-vite-plugin": "^0.7.2",
-        "vite": "^4.0.0"
+        "postcss": "^8.5.3",
+        "tailwindcss": "^4.1.5",
+        "vite": "^4.5.14"
     },
     "dependencies": {
         "toastify-js": "^1.12.0"
